Phaze4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIGIT_ERROR
    ILLEGALCHAR
    LACKO
    RACKO

Grammar

Rule 0     S' -> program
Rule 1     program -> C V P BEGIN statement S END SEMICOLON
Rule 2     C -> CONST const_decl C
Rule 3     C -> epsilon
Rule 4     V -> VAR var_decl V
Rule 5     V -> epsilon
Rule 6     P -> proc_decl P
Rule 7     P -> epsilon
Rule 8     S -> statement S
Rule 9     S -> epsilon
Rule 10    const_decl -> ID EQUAL integer SEMICOLON
Rule 11    ID -> IDENTIFIER CAMMA ID
Rule 12    ID -> IDENTIFIER
Rule 13    var_decl -> ID COLON type SEMICOLON
Rule 14    type -> INTEGER
Rule 15    proc_decl -> PROCEDURE IDENTIFIER LPAREN F RPAREN SEMICOLON block
Rule 16    F -> format SEMICOLON F
Rule 17    F -> format
Rule 18    F -> epsilon
Rule 19    format -> ID COLON M type
Rule 20    M -> mode
Rule 21    M -> epsilon
Rule 22    mode -> IN
Rule 23    mode -> OUT
Rule 24    mode -> IN OUT
Rule 25    block -> BEGIN C V S END SEMICOLON
Rule 26    statement -> block
Rule 27    statement -> print
Rule 28    statement -> read
Rule 29    statement -> asgn
Rule 30    statement -> cond
Rule 31    statement -> for
Rule 32    statement -> return
Rule 33    statement -> call
Rule 34    print -> PRINT LPAREN string E RPAREN SEMICOLON
Rule 35    E -> expr CAMMA E
Rule 36    E -> expr
Rule 37    E -> epsilon
Rule 38    read -> READ LPAREN string Va RPAREN SEMICOLON
Rule 39    Va -> var CAMMA Va
Rule 40    Va -> expr
Rule 41    Va -> epsilon
Rule 42    string -> IDENTIFIER
Rule 43    string -> CHAR
Rule 44    asgn -> var ASSIGN expr SEMICOLON
Rule 45    cond -> IF bool THEN statement EL
Rule 46    EL -> ELSE statement
Rule 47    EL -> epsilon
Rule 48    for -> FOR IDENTIFIER ASSIGN expr TO expr DO statement
Rule 49    return -> RETURN SEMICOLON
Rule 50    call -> CALL IDENTIFIER LPAREN E RPAREN SEMICOLON
Rule 51    expr -> integer
Rule 52    expr -> MINES expr
Rule 53    expr -> expr PLUS expr
Rule 54    expr -> expr MINES expr
Rule 55    expr -> expr MUL expr
Rule 56    expr -> expr DIVIDE expr
Rule 57    expr -> LPAREN expr RPAREN
Rule 58    expr -> var
Rule 59    expr -> CHAR
Rule 60    var -> IDENTIFIER BRAC
Rule 61    BRAC -> LBRACKET expr RBRACKET
Rule 62    BRAC -> epsilon
Rule 63    bool -> NOT bool
Rule 64    bool -> bool AND bool
Rule 65    bool -> bool OR bool
Rule 66    bool -> bool relop bool
Rule 67    bool -> LPAREN bool RPAREN
Rule 68    bool -> IDENTIFIER
Rule 69    bool -> DIGIT
Rule 70    relop -> EQUAL
Rule 71    relop -> GREATER
Rule 72    relop -> LESS
Rule 73    relop -> GREATEQ
Rule 74    relop -> LESSEQ
Rule 75    relop -> NOT_EQUAL
Rule 76    integer -> DIGIT
Rule 77    epsilon -> <empty>

Terminals, with rules where they appear

AND                  : 64
ASSIGN               : 44 48
BEGIN                : 1 25
CALL                 : 50
CAMMA                : 11 35 39
CHAR                 : 43 59
COLON                : 13 19
CONST                : 2
DIGIT                : 69 76
DIGIT_ERROR          : 
DIVIDE               : 56
DO                   : 48
ELSE                 : 46
END                  : 1 25
EQUAL                : 10 70
FOR                  : 48
GREATEQ              : 73
GREATER              : 71
IDENTIFIER           : 11 12 15 42 48 50 60 68
IF                   : 45
ILLEGALCHAR          : 
IN                   : 22 24
INTEGER              : 14
LACKO                : 
LBRACKET             : 61
LESS                 : 72
LESSEQ               : 74
LPAREN               : 15 34 38 50 57 67
MINES                : 52 54
MUL                  : 55
NOT                  : 63
NOT_EQUAL            : 75
OR                   : 65
OUT                  : 23 24
PLUS                 : 53
PRINT                : 34
PROCEDURE            : 15
RACKO                : 
RBRACKET             : 61
READ                 : 38
RETURN               : 49
RPAREN               : 15 34 38 50 57 67
SEMICOLON            : 1 10 13 15 16 25 34 38 44 49 50
THEN                 : 45
TO                   : 48
VAR                  : 4
error                : 

Nonterminals, with rules where they appear

BRAC                 : 60
C                    : 1 2 25
E                    : 34 35 50
EL                   : 45
F                    : 15 16
ID                   : 10 11 13 19
M                    : 19
P                    : 1 6
S                    : 1 8 25
V                    : 1 4 25
Va                   : 38 39
asgn                 : 29
block                : 15 26
bool                 : 45 63 64 64 65 65 66 66 67
call                 : 33
cond                 : 30
const_decl           : 2
epsilon              : 3 5 7 9 18 21 37 41 47 62
expr                 : 35 36 40 44 48 48 52 53 53 54 54 55 55 56 56 57 61
for                  : 31
format               : 16 17
integer              : 10 51
mode                 : 20
print                : 27
proc_decl            : 6
program              : 0
read                 : 28
relop                : 66
return               : 32
statement            : 1 8 45 46 48
string               : 34 38
type                 : 13 19
var                  : 39 44 58
var_decl             : 4

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . C V P BEGIN statement S END SEMICOLON
    (2) C -> . CONST const_decl C
    (3) C -> . epsilon
    (77) epsilon -> .

    CONST           shift and go to state 3
    VAR             reduce using rule 77 (epsilon -> .)
    PROCEDURE       reduce using rule 77 (epsilon -> .)
    BEGIN           reduce using rule 77 (epsilon -> .)

    program                        shift and go to state 1
    C                              shift and go to state 2
    epsilon                        shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> C . V P BEGIN statement S END SEMICOLON
    (4) V -> . VAR var_decl V
    (5) V -> . epsilon
    (77) epsilon -> .

    VAR             shift and go to state 6
    PROCEDURE       reduce using rule 77 (epsilon -> .)
    BEGIN           reduce using rule 77 (epsilon -> .)

    V                              shift and go to state 5
    epsilon                        shift and go to state 7

state 3

    (2) C -> CONST . const_decl C
    (10) const_decl -> . ID EQUAL integer SEMICOLON
    (11) ID -> . IDENTIFIER CAMMA ID
    (12) ID -> . IDENTIFIER

    IDENTIFIER      shift and go to state 10

    const_decl                     shift and go to state 8
    ID                             shift and go to state 9

state 4

    (3) C -> epsilon .

    VAR             reduce using rule 3 (C -> epsilon .)
    PROCEDURE       reduce using rule 3 (C -> epsilon .)
    BEGIN           reduce using rule 3 (C -> epsilon .)
    PRINT           reduce using rule 3 (C -> epsilon .)
    READ            reduce using rule 3 (C -> epsilon .)
    IF              reduce using rule 3 (C -> epsilon .)
    FOR             reduce using rule 3 (C -> epsilon .)
    RETURN          reduce using rule 3 (C -> epsilon .)
    CALL            reduce using rule 3 (C -> epsilon .)
    IDENTIFIER      reduce using rule 3 (C -> epsilon .)
    END             reduce using rule 3 (C -> epsilon .)


state 5

    (1) program -> C V . P BEGIN statement S END SEMICOLON
    (6) P -> . proc_decl P
    (7) P -> . epsilon
    (15) proc_decl -> . PROCEDURE IDENTIFIER LPAREN F RPAREN SEMICOLON block
    (77) epsilon -> .

    PROCEDURE       shift and go to state 14
    BEGIN           reduce using rule 77 (epsilon -> .)

    P                              shift and go to state 11
    proc_decl                      shift and go to state 12
    epsilon                        shift and go to state 13

state 6

    (4) V -> VAR . var_decl V
    (13) var_decl -> . ID COLON type SEMICOLON
    (11) ID -> . IDENTIFIER CAMMA ID
    (12) ID -> . IDENTIFIER

    IDENTIFIER      shift and go to state 10

    var_decl                       shift and go to state 15
    ID                             shift and go to state 16

state 7

    (5) V -> epsilon .

    PROCEDURE       reduce using rule 5 (V -> epsilon .)
    BEGIN           reduce using rule 5 (V -> epsilon .)
    PRINT           reduce using rule 5 (V -> epsilon .)
    READ            reduce using rule 5 (V -> epsilon .)
    IF              reduce using rule 5 (V -> epsilon .)
    FOR             reduce using rule 5 (V -> epsilon .)
    RETURN          reduce using rule 5 (V -> epsilon .)
    CALL            reduce using rule 5 (V -> epsilon .)
    IDENTIFIER      reduce using rule 5 (V -> epsilon .)
    END             reduce using rule 5 (V -> epsilon .)


state 8

    (2) C -> CONST const_decl . C
    (2) C -> . CONST const_decl C
    (3) C -> . epsilon
    (77) epsilon -> .

    CONST           shift and go to state 3
    VAR             reduce using rule 77 (epsilon -> .)
    PROCEDURE       reduce using rule 77 (epsilon -> .)
    BEGIN           reduce using rule 77 (epsilon -> .)
    PRINT           reduce using rule 77 (epsilon -> .)
    READ            reduce using rule 77 (epsilon -> .)
    IF              reduce using rule 77 (epsilon -> .)
    FOR             reduce using rule 77 (epsilon -> .)
    RETURN          reduce using rule 77 (epsilon -> .)
    CALL            reduce using rule 77 (epsilon -> .)
    IDENTIFIER      reduce using rule 77 (epsilon -> .)
    END             reduce using rule 77 (epsilon -> .)

    C                              shift and go to state 17
    epsilon                        shift and go to state 4

state 9

    (10) const_decl -> ID . EQUAL integer SEMICOLON

    EQUAL           shift and go to state 18


state 10

    (11) ID -> IDENTIFIER . CAMMA ID
    (12) ID -> IDENTIFIER .

    CAMMA           shift and go to state 19
    EQUAL           reduce using rule 12 (ID -> IDENTIFIER .)
    COLON           reduce using rule 12 (ID -> IDENTIFIER .)


state 11

    (1) program -> C V P . BEGIN statement S END SEMICOLON

    BEGIN           shift and go to state 20


state 12

    (6) P -> proc_decl . P
    (6) P -> . proc_decl P
    (7) P -> . epsilon
    (15) proc_decl -> . PROCEDURE IDENTIFIER LPAREN F RPAREN SEMICOLON block
    (77) epsilon -> .

    PROCEDURE       shift and go to state 14
    BEGIN           reduce using rule 77 (epsilon -> .)

    proc_decl                      shift and go to state 12
    P                              shift and go to state 21
    epsilon                        shift and go to state 13

state 13

    (7) P -> epsilon .

    BEGIN           reduce using rule 7 (P -> epsilon .)


state 14

    (15) proc_decl -> PROCEDURE . IDENTIFIER LPAREN F RPAREN SEMICOLON block

    IDENTIFIER      shift and go to state 22


state 15

    (4) V -> VAR var_decl . V
    (4) V -> . VAR var_decl V
    (5) V -> . epsilon
    (77) epsilon -> .

    VAR             shift and go to state 6
    PROCEDURE       reduce using rule 77 (epsilon -> .)
    BEGIN           reduce using rule 77 (epsilon -> .)
    PRINT           reduce using rule 77 (epsilon -> .)
    READ            reduce using rule 77 (epsilon -> .)
    IF              reduce using rule 77 (epsilon -> .)
    FOR             reduce using rule 77 (epsilon -> .)
    RETURN          reduce using rule 77 (epsilon -> .)
    CALL            reduce using rule 77 (epsilon -> .)
    IDENTIFIER      reduce using rule 77 (epsilon -> .)
    END             reduce using rule 77 (epsilon -> .)

    V                              shift and go to state 23
    epsilon                        shift and go to state 7

state 16

    (13) var_decl -> ID . COLON type SEMICOLON

    COLON           shift and go to state 24


state 17

    (2) C -> CONST const_decl C .

    VAR             reduce using rule 2 (C -> CONST const_decl C .)
    PROCEDURE       reduce using rule 2 (C -> CONST const_decl C .)
    BEGIN           reduce using rule 2 (C -> CONST const_decl C .)
    PRINT           reduce using rule 2 (C -> CONST const_decl C .)
    READ            reduce using rule 2 (C -> CONST const_decl C .)
    IF              reduce using rule 2 (C -> CONST const_decl C .)
    FOR             reduce using rule 2 (C -> CONST const_decl C .)
    RETURN          reduce using rule 2 (C -> CONST const_decl C .)
    CALL            reduce using rule 2 (C -> CONST const_decl C .)
    IDENTIFIER      reduce using rule 2 (C -> CONST const_decl C .)
    END             reduce using rule 2 (C -> CONST const_decl C .)


state 18

    (10) const_decl -> ID EQUAL . integer SEMICOLON
    (76) integer -> . DIGIT

    DIGIT           shift and go to state 26

    integer                        shift and go to state 25

state 19

    (11) ID -> IDENTIFIER CAMMA . ID
    (11) ID -> . IDENTIFIER CAMMA ID
    (12) ID -> . IDENTIFIER

    IDENTIFIER      shift and go to state 10

    ID                             shift and go to state 27

state 20

    (1) program -> C V P BEGIN . statement S END SEMICOLON
    (26) statement -> . block
    (27) statement -> . print
    (28) statement -> . read
    (29) statement -> . asgn
    (30) statement -> . cond
    (31) statement -> . for
    (32) statement -> . return
    (33) statement -> . call
    (25) block -> . BEGIN C V S END SEMICOLON
    (34) print -> . PRINT LPAREN string E RPAREN SEMICOLON
    (38) read -> . READ LPAREN string Va RPAREN SEMICOLON
    (44) asgn -> . var ASSIGN expr SEMICOLON
    (45) cond -> . IF bool THEN statement EL
    (48) for -> . FOR IDENTIFIER ASSIGN expr TO expr DO statement
    (49) return -> . RETURN SEMICOLON
    (50) call -> . CALL IDENTIFIER LPAREN E RPAREN SEMICOLON
    (60) var -> . IDENTIFIER BRAC

    BEGIN           shift and go to state 28
    PRINT           shift and go to state 38
    READ            shift and go to state 39
    IF              shift and go to state 41
    FOR             shift and go to state 42
    RETURN          shift and go to state 44
    CALL            shift and go to state 45
    IDENTIFIER      shift and go to state 43

    statement                      shift and go to state 29
    block                          shift and go to state 30
    print                          shift and go to state 31
    read                           shift and go to state 32
    asgn                           shift and go to state 33
    cond                           shift and go to state 34
    for                            shift and go to state 35
    return                         shift and go to state 36
    call                           shift and go to state 37
    var                            shift and go to state 40

state 21

    (6) P -> proc_decl P .

    BEGIN           reduce using rule 6 (P -> proc_decl P .)


state 22

    (15) proc_decl -> PROCEDURE IDENTIFIER . LPAREN F RPAREN SEMICOLON block

    LPAREN          shift and go to state 46


state 23

    (4) V -> VAR var_decl V .

    PROCEDURE       reduce using rule 4 (V -> VAR var_decl V .)
    BEGIN           reduce using rule 4 (V -> VAR var_decl V .)
    PRINT           reduce using rule 4 (V -> VAR var_decl V .)
    READ            reduce using rule 4 (V -> VAR var_decl V .)
    IF              reduce using rule 4 (V -> VAR var_decl V .)
    FOR             reduce using rule 4 (V -> VAR var_decl V .)
    RETURN          reduce using rule 4 (V -> VAR var_decl V .)
    CALL            reduce using rule 4 (V -> VAR var_decl V .)
    IDENTIFIER      reduce using rule 4 (V -> VAR var_decl V .)
    END             reduce using rule 4 (V -> VAR var_decl V .)


state 24

    (13) var_decl -> ID COLON . type SEMICOLON
    (14) type -> . INTEGER

    INTEGER         shift and go to state 48

    type                           shift and go to state 47

state 25

    (10) const_decl -> ID EQUAL integer . SEMICOLON

    SEMICOLON       shift and go to state 49


state 26

    (76) integer -> DIGIT .

    SEMICOLON       reduce using rule 76 (integer -> DIGIT .)
    PLUS            reduce using rule 76 (integer -> DIGIT .)
    MINES           reduce using rule 76 (integer -> DIGIT .)
    MUL             reduce using rule 76 (integer -> DIGIT .)
    DIVIDE          reduce using rule 76 (integer -> DIGIT .)
    RBRACKET        reduce using rule 76 (integer -> DIGIT .)
    CAMMA           reduce using rule 76 (integer -> DIGIT .)
    RPAREN          reduce using rule 76 (integer -> DIGIT .)
    TO              reduce using rule 76 (integer -> DIGIT .)
    DO              reduce using rule 76 (integer -> DIGIT .)


state 27

    (11) ID -> IDENTIFIER CAMMA ID .

    EQUAL           reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)
    COLON           reduce using rule 11 (ID -> IDENTIFIER CAMMA ID .)


state 28

    (25) block -> BEGIN . C V S END SEMICOLON
    (2) C -> . CONST const_decl C
    (3) C -> . epsilon
    (77) epsilon -> .

    CONST           shift and go to state 3
    VAR             reduce using rule 77 (epsilon -> .)
    BEGIN           reduce using rule 77 (epsilon -> .)
    PRINT           reduce using rule 77 (epsilon -> .)
    READ            reduce using rule 77 (epsilon -> .)
    IF              reduce using rule 77 (epsilon -> .)
    FOR             reduce using rule 77 (epsilon -> .)
    RETURN          reduce using rule 77 (epsilon -> .)
    CALL            reduce using rule 77 (epsilon -> .)
    IDENTIFIER      reduce using rule 77 (epsilon -> .)
    END             reduce using rule 77 (epsilon -> .)

    C                              shift and go to state 50
    epsilon                        shift and go to state 4

state 29

    (1) program -> C V P BEGIN statement . S END SEMICOLON
    (8) S -> . statement S
    (9) S -> . epsilon
    (26) statement -> . block
    (27) statement -> . print
    (28) statement -> . read
    (29) statement -> . asgn
    (30) statement -> . cond
    (31) statement -> . for
    (32) statement -> . return
    (33) statement -> . call
    (77) epsilon -> .
    (25) block -> . BEGIN C V S END SEMICOLON
    (34) print -> . PRINT LPAREN string E RPAREN SEMICOLON
    (38) read -> . READ LPAREN string Va RPAREN SEMICOLON
    (44) asgn -> . var ASSIGN expr SEMICOLON
    (45) cond -> . IF bool THEN statement EL
    (48) for -> . FOR IDENTIFIER ASSIGN expr TO expr DO statement
    (49) return -> . RETURN SEMICOLON
    (50) call -> . CALL IDENTIFIER LPAREN E RPAREN SEMICOLON
    (60) var -> . IDENTIFIER BRAC

    END             reduce using rule 77 (epsilon -> .)
    BEGIN           shift and go to state 28
    PRINT           shift and go to state 38
    READ            shift and go to state 39
    IF              shift and go to state 41
    FOR             shift and go to state 42
    RETURN          shift and go to state 44
    CALL            shift and go to state 45
    IDENTIFIER      shift and go to state 43

    statement                      shift and go to state 51
    S                              shift and go to state 52
    epsilon                        shift and go to state 53
    block                          shift and go to state 30
    print                          shift and go to state 31
    read                           shift and go to state 32
    asgn                           shift and go to state 33
    cond                           shift and go to state 34
    for                            shift and go to state 35
    return                         shift and go to state 36
    call                           shift and go to state 37
    var                            shift and go to state 40

state 30

    (26) statement -> block .

    BEGIN           reduce using rule 26 (statement -> block .)
    PRINT           reduce using rule 26 (statement -> block .)
    READ            reduce using rule 26 (statement -> block .)
    IF              reduce using rule 26 (statement -> block .)
    FOR             reduce using rule 26 (statement -> block .)
    RETURN          reduce using rule 26 (statement -> block .)
    CALL            reduce using rule 26 (statement -> block .)
    IDENTIFIER      reduce using rule 26 (statement -> block .)
    END             reduce using rule 26 (statement -> block .)
    ELSE            reduce using rule 26 (statement -> block .)


state 31

    (27) statement -> print .

    BEGIN           reduce using rule 27 (statement -> print .)
    PRINT           reduce using rule 27 (statement -> print .)
    READ            reduce using rule 27 (statement -> print .)
    IF              reduce using rule 27 (statement -> print .)
    FOR             reduce using rule 27 (statement -> print .)
    RETURN          reduce using rule 27 (statement -> print .)
    CALL            reduce using rule 27 (statement -> print .)
    IDENTIFIER      reduce using rule 27 (statement -> print .)
    END             reduce using rule 27 (statement -> print .)
    ELSE            reduce using rule 27 (statement -> print .)


state 32

    (28) statement -> read .

    BEGIN           reduce using rule 28 (statement -> read .)
    PRINT           reduce using rule 28 (statement -> read .)
    READ            reduce using rule 28 (statement -> read .)
    IF              reduce using rule 28 (statement -> read .)
    FOR             reduce using rule 28 (statement -> read .)
    RETURN          reduce using rule 28 (statement -> read .)
    CALL            reduce using rule 28 (statement -> read .)
    IDENTIFIER      reduce using rule 28 (statement -> read .)
    END             reduce using rule 28 (statement -> read .)
    ELSE            reduce using rule 28 (statement -> read .)


state 33

    (29) statement -> asgn .

    BEGIN           reduce using rule 29 (statement -> asgn .)
    PRINT           reduce using rule 29 (statement -> asgn .)
    READ            reduce using rule 29 (statement -> asgn .)
    IF              reduce using rule 29 (statement -> asgn .)
    FOR             reduce using rule 29 (statement -> asgn .)
    RETURN          reduce using rule 29 (statement -> asgn .)
    CALL            reduce using rule 29 (statement -> asgn .)
    IDENTIFIER      reduce using rule 29 (statement -> asgn .)
    END             reduce using rule 29 (statement -> asgn .)
    ELSE            reduce using rule 29 (statement -> asgn .)


state 34

    (30) statement -> cond .

    BEGIN           reduce using rule 30 (statement -> cond .)
    PRINT           reduce using rule 30 (statement -> cond .)
    READ            reduce using rule 30 (statement -> cond .)
    IF              reduce using rule 30 (statement -> cond .)
    FOR             reduce using rule 30 (statement -> cond .)
    RETURN          reduce using rule 30 (statement -> cond .)
    CALL            reduce using rule 30 (statement -> cond .)
    IDENTIFIER      reduce using rule 30 (statement -> cond .)
    END             reduce using rule 30 (statement -> cond .)
    ELSE            reduce using rule 30 (statement -> cond .)


state 35

    (31) statement -> for .

    BEGIN           reduce using rule 31 (statement -> for .)
    PRINT           reduce using rule 31 (statement -> for .)
    READ            reduce using rule 31 (statement -> for .)
    IF              reduce using rule 31 (statement -> for .)
    FOR             reduce using rule 31 (statement -> for .)
    RETURN          reduce using rule 31 (statement -> for .)
    CALL            reduce using rule 31 (statement -> for .)
    IDENTIFIER      reduce using rule 31 (statement -> for .)
    END             reduce using rule 31 (statement -> for .)
    ELSE            reduce using rule 31 (statement -> for .)


state 36

    (32) statement -> return .
